# context-refinery

./: .gitignore  README.md  index.html  install.ps1  install.sh  package.json  pnpm-lock.yaml  start.bat  start.sh  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
scripts/: build-sidecar.py  generate-icons.py
src/: App.vue  style.css
src-backend/: .env.example  config.py  main.py  pyproject.toml  requirements.txt
src-backend/agents/: __init__.py  graph.py  intent_agent.py  prompts.py  refinery_agent.py
src-backend/eval/: __init__.py  evaluator.py  metrics.py
src-backend/models/: __init__.py  schemas.py  state.py
src-backend/retriever/: __init__.py  embeddings.py  hybrid.py  indexer.py  reranker.py
src-backend/routers/: __init__.py  eval.py  models.py  refinery.py  setup.py  workbench.py
src-backend/services/: __init__.py  file_processor.py  persistence.py  token_counter.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/common/: AppHeader.vue  StatusBar.vue  TokenBudgetSlider.vue
src/components/eval/: EvalDashboard.vue
src/components/refinery/: AgentThinkingStream.vue  ModelSelector.vue  PromptPreview.vue
src/components/workbench/: FileDropZone.vue  FileTree.vue  GoalEditor.vue
src/composables/: useRefineryAPI.ts  useSSE.ts
src/router/: index.ts
src/stores/: refinery.ts  settings.ts  workbench.ts
src/views/: SettingsView.vue  SetupView.vue  WorkbenchView.vue
